--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,33 +4,36 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="1.29"
-      android:scaleY="1.29"
-      android:translateX="-15.66"
-      android:translateY="-15.66">
+  <group android:scaleX="0.7"
+      android:scaleY="0.7"
+      android:translateX="16.2"
+      android:translateY="16.2">
+      
+      <!-- 단어장/책 모양 -->
       <path
-          android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-          <aapt:attr name="android:fillColor">
-              <gradient
-                  android:startY="49.59793"
-                  android:startX="42.9492"
-                  android:endY="92.4963"
-                  android:endX="85.84757"
-                  android:type="linear">
-                  <item
-                      android:color="#44000000"
-                      android:offset="0.0" />
-                  <item
-                      android:color="#00000000"
-                      android:offset="1.0" />
-              </gradient>
-          </aapt:attr>
-      </path>
+          android:fillColor="@color/launcher_foreground"
+          android:pathData="M20,15L88,15A6,6 0,0 1,94 21L94,87A6,6 0,0 1,88 93L20,93A6,6 0,0 1,14 87L14,21A6,6 0,0 1,20 15z" />
       <path
-          android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-          android:fillColor="#FFFFFF"
-          android:fillType="nonZero"
-          android:strokeWidth="1"
-          android:strokeColor="#00000000"/>
+          android:strokeWidth="3"
+          android:strokeColor="#80FFFFFF"
+          android:pathData="M54,15L54,93" />
+      
+      <!-- 카메라 렌즈 아이콘 (책 위에) -->
+      <path
+          android:fillColor="#4A4A4A"
+          android:pathData="M54,54m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0" />
+      <path
+          android:fillColor="#6E6E6E"
+          android:pathData="M54,54m-14,0a14,14 0,1 1,28 0a14,14 0,1 1,-28 0" />
+      <path
+          android:fillColor="@color/launcher_foreground"
+          android:pathData="M54,54m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0" />
+      
+      <!-- 'AR' 글자 (렌즈 안에 작게 또는 책 표지에) -->
+      <path
+          android:fillColor="#4A4A4A"
+          android:pathData="M48,50L50,46L52,50ZM50,46L50,58M53,46L57,46L57,50L53,50M53,52L57,52L55,58Z"
+          android:strokeWidth="1.5"
+          android:strokeColor="#4A4A4A" />
   </group>
 </vector>
