--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,39 +1,85 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.7"
-      android:scaleY="0.7"
-      android:translateX="16.2"
-      android:translateY="16.2">
-      
-      <!-- 단어장/책 모양 -->
-      <path
-          android:fillColor="@color/launcher_foreground"
-          android:pathData="M20,15L88,15A6,6 0,0 1,94 21L94,87A6,6 0,0 1,88 93L20,93A6,6 0,0 1,14 87L14,21A6,6 0,0 1,20 15z" />
-      <path
-          android:strokeWidth="3"
-          android:strokeColor="#80FFFFFF"
-          android:pathData="M54,15L54,93" />
-      
-      <!-- 카메라 렌즈 아이콘 (책 위에) -->
-      <path
-          android:fillColor="#4A4A4A"
-          android:pathData="M54,54m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0" />
-      <path
-          android:fillColor="#6E6E6E"
-          android:pathData="M54,54m-14,0a14,14 0,1 1,28 0a14,14 0,1 1,-28 0" />
-      <path
-          android:fillColor="@color/launcher_foreground"
-          android:pathData="M54,54m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0" />
-      
-      <!-- 'AR' 글자 (렌즈 안에 작게 또는 책 표지에) -->
-      <path
-          android:fillColor="#4A4A4A"
-          android:pathData="M48,50L50,46L52,50ZM50,46L50,58M53,46L57,46L57,50L53,50M53,52L57,52L55,58Z"
-          android:strokeWidth="1.5"
-          android:strokeColor="#4A4A4A" />
-  </group>
+
+    <!-- 1) 아이콘 전체 노란 배경 -->
+    <path
+        android:fillColor="#E6FA76"
+        android:pathData="M18,18h72v72h-72z" />
+
+    <!-- 2) 회색 원(검은 테두리) - 크기 축소 및 중앙 배치 -->
+    <path
+        android:fillColor="#B0B0B0"
+        android:strokeColor="#000000"
+        android:strokeWidth="1.5"
+        android:pathData="M54,54 m-30,0 a30,30 0 1 1 60,0 a30,30 0 1 1 -60,0"/>
+
+    <!-- 3) 카메라 아이콘 - 현실감 있게 수정 -->
+    <group
+        android:scaleX="0.5"
+        android:scaleY="0.5"
+        android:translateX="27"
+        android:translateY="27">
+
+        <!-- 카메라 바디 - 더 입체감 있게 수정 -->
+        <path
+            android:fillColor="#2A2A2A"
+            android:strokeColor="#000000"
+            android:strokeWidth="3"
+            android:pathData="M20,15
+                              L88,15
+                              A6,6 0,0,1 94,21
+                              L94,87
+                              A6,6 0,0,1 88,93
+                              L20,93
+                              A6,6 0,0,1 14,87
+                              L14,21
+                              A6,6 0,0,1 20,15 Z"/>
+                              
+        <!-- 카메라 상단 부분 -->
+        <path
+            android:fillColor="#3A3A3A"
+            android:pathData="M14,21 L14,35 L94,35 L94,21 A6,6 0,0,0 88,15 L20,15 A6,6 0,0,0 14,21 Z"/>
+
+        <!-- 렌즈 외곽 테두리 -->
+        <path
+            android:fillColor="#1A1A1A"
+            android:strokeColor="#000000"
+            android:strokeWidth="2"
+            android:pathData="M54,54 m-24,0 a24,24 0,1,1 48,0 a24,24 0,1,1 -48,0"/>
+            
+        <!-- 렌즈(세 겹) - 더 현실적인 렌즈 -->
+        <path
+            android:fillColor="#4A4A4A"
+            android:pathData="M54,54 m-20,0 a20,20 0,1,1 40,0 a20,20 0,1,1 -40,0"/>
+        <path
+            android:fillColor="#6E6E6E"
+            android:pathData="M54,54 m-14,0 a14,14 0,1,1 28,0 a14,14 0,1,1 -28,0"/>
+        <path
+            android:fillColor="#333333"
+            android:pathData="M54,54 m-10,0 a10,10 0,1,1 20,0 a10,10 0,1,1 -20,0"/>
+        <path
+            android:fillColor="#111111"
+            android:pathData="M54,54 m-6,0  a6,6  0,1,1 12,0 a6,6  0,1,1 -12,0"/>
+
+        <!-- 렌즈 반사광 -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M48,48 m-2,0 a2,2 0,1,1 4,0 a2,2 0,1,1 -4,0"/>
+
+        <!-- 셔터 버튼 - 더 입체감 있게 -->
+        <path
+            android:fillColor="#E74C3C"
+            android:strokeColor="#000000"
+            android:strokeWidth="1"
+            android:pathData="M84,28 m-6,0 a6,6 0,1,1 12,0 a6,6 0,1,1 -12,0"/>
+            
+        <!-- 플래시 -->
+        <path
+            android:fillColor="#FFEB3B"
+            android:pathData="M30,25 L36,25 L36,31 L30,31 Z"/>
+    </group>
+
 </vector>
